--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Email: <a href="mailto:contato@techfix.com">contato@techfix.com</a></p>
+            <p>Email: <a href="mailto:techfixsolutions01@gmail.com">techfixsolutions01@gmail.com</a></p>
             <p>WhatsApp: <a href="https://wa.me/5592995178534" target="_blank">Clique aqui para conversar</a></p>
         </section>
     </main>
